To test auto deployment from Azure

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p Hi, Welcome to #{title}. Adding more content. From Windows.
+  p Hi, Welcome to #{title}. Adding more content from another Git Repo.
